--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 </head>
 <body>
     <!-- Existing script and content -->
+    <h1>本船荷役状況</h1>
     <div class="table-container">
         <table>
             <!-- First table content -->
-             <tr>
+            <tr>
             <th>状態</th>
             <th>GC No.</th>
             <th>荷役中レーン</th>
@@ -89,7 +90,9 @@
             <td>NA, NB, NF, NG, NH, NI, NJ, NK, NL, NM, NN <br>SA, SB, SC, SD, DE, DF</td>
         </tr>
         </table>
-         <h1>本船荷役予定</h1>
+    </div>
+    <!-- Rest of the body content -->
+    <h1>本船荷役予定</h1>
     <table border="1">
         <tr>
             <td>NA</td>
@@ -162,7 +165,5 @@
             <td></td>
         </tr>
     </table>
-    </div>
-    <!-- Rest of the body content -->
 </body>
 </html>
