--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         table {
             border-collapse: collapse;
             margin-right: 12px; /* Add space between tables */
+            margin-bottom: 12px;
             width: auto; /* Set width to auto to allow tables to size according to content */
         }
         th, td {
@@ -91,7 +92,7 @@
         </table>
     </div>
     <!-- Rest of the body content -->
-    <table border="3">
+    <table border="1">
         <tr>
             <td>NA</td>
             <td>NB</td>
